prometheus/ingress-all-svc.yml
apiVersion: extensions/v1beat1
kind: Ingress
metadata:
  name: prometheus-ing
  namespace: monitoring
spec: 
  rules: 
  - host: prometheus.monitoring.k8s.local
    http: 
      paths:
      - backend: 
          serviceName: prometheus-k8s
          servicePort: 9090

---
apiVersion: extensions/v1beat1
kind: Ingress
metadata: 
  name: grafana-ing
  namespace: monitoring
spec:
  rules:
  - host: grafana.moniotring.k8s.local
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        
---
apiVersion: extensions/v1beat1
kind: Ingress
metadata: 
  name: altermanager-ing
  namespace: monitoring
spec:
  rules:
  - host: altermanager.monitoring.k8s.local
    http:
      paths:
      - backend:
          serviceName: altermanager-main
          servicePort: 9093
